Correctly setup visibleByClass

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -116,7 +116,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     box-shadow: 0px 0px 20px rgba(0,0,0,0.4);
 }
 
-.fa-1-5x {
+.fa-1_5x, .fa-1-5x {
     font-size: 1.5em; }
 
 .widthAuto {
